# tube

./: .gitignore  AGENTS.md  README.md  deployment.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/cli/: pyproject.toml
apps/cli/src/yt/: cloud.py  config.py  main.py  metadata.py  server.py  storage.py  summarizer.py  transcript.py
apps/cli/tests/: conftest.py  test_cloud.py  test_main.py  test_metadata.py  test_storage.py  test_summarizer.py  test_transcript.py
apps/web/: .env.local.example  eslint.config.js  index.html  package.json  vite.config.ts
apps/web-local/: package.json  vite.config.ts
apps/web-local/src/components/: video-detail.tsx
apps/web-local/src/lib/: types.ts
apps/web/convex/: apiKeys.ts  auth.ts  folders.ts  http.ts  schema.ts  tagUtils.ts  validators.ts  videos.ts
apps/web/convex/_generated/: api.d.ts
apps/web/public/: site.webmanifest
apps/web/src/: App.tsx  index.css
convex/: auth.ts
design/: logo.psd
docs/: convex_rules.md
tests/: conftest.py  test_cloud.py  test_main.py  test_server.py  test_storage.py  test_summarizer.py  test_transcript.py
web/: .env.local.example  package-lock.json  package.json
web-local/: index.html  vite.config.ts
web-local/src/: App.tsx
web-local/src/hooks/: use-theme.ts  use-video-detail.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: app-sidebar.tsx  settings-page.tsx  theme-switcher.tsx  video-detail.tsx
web/src/hooks/: use-videos.ts
web/src/lib/: utils.ts
yt/: cloud.py  main.py  server.py  storage.py  summarizer.py  transcript.py
(+35 files in other folders)
