[project]
name = "yt-cli"
version = "0.1.0"
description = "YouTube Transcript & Summary CLI"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api",
    "click",
    "rich",
    "requests",
]

[project.scripts]
yt = "yt.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
