[project]
name = "yt-cli"
version = "0.1.0"
description = "YouTube Transcript & Summary CLI"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api",
    "click",
    "rich",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
yt = "yt.main:cli"
tube = "yt.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
