[project]
name = "yt-cli"
version = "0.1.0"
description = "YouTube Transcript & Summary CLI"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api",
    "click",
    "rich",
    "requests",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx"]

[project.scripts]
yt = "yt.main:cli"
tube = "yt.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
yt = ["web/dist/**/*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
